k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nova-hub-app
spec:
  selector:
    app: nova-hub-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
